--- a/SofaProducts.html
+++ b/SofaProducts.html
@@ -119,5 +119,7 @@
                 mis sobib igasse interjööri, pakkudes mõnusat istumisalust ja silmailu. </p>
         </div>
     </div>
+
+    <a href="index.html"> Back in main page</a>
 </body>
 </html>
