Added header and footer
In every pages add to header and footer

--- a/BlogView.html
+++ b/BlogView.html
@@ -6,8 +6,36 @@
     <title>Blog view</title>
     <link rel="stylesheet" href="css\bootstrap.css">
     <script src="js/bootstrap.js"></script>
+    <link rel="stylesheet" href="disain.css">
 </head>
 <body>
+
+    <div class="header">
+        <div class="container">
+            <!-- Logo vasakul -->
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/soft-logo-png-transparent.png" alt="Diivanid logo">
+                </a>
+            </div>
+
+            <!-- Navigatsioonimenüü keskel -->
+            <div class="nav">
+                <a href="SofaProducts.html">Sofa Products</a>
+                <a href="BlogView.html">Blog View</a> 
+                <a href="Contact.html">Contact</a>
+                <a href="LogIn.html">Log in</a>
+            </div>
+
+            <!-- Ostukorvi ikoon paremal -->
+            <div class="cart">
+                <a href="cart.html">
+                    <img src="images/360_F_631788778_jbL4ZKDb5q1pQVst2lpEg7XFGKLpupBE.jpg" alt="Ostukorv">
+                </a>
+            </div>
+        </div>
+    </div>
+
     <div class="posts">
         <div class="h-container">
             <div class="grid grid--center-xs grid--quintuple-gutter posts__grid">
@@ -56,6 +84,11 @@
         </div>
     </div>
 
-    <a href="index.html"> Back in Main page</a>
+    <div class="footer">
+        <div class="container">
+            <p>© 2025 Diivanid OÜ. Kõik õigused kaitstud.</p>
+            <a href="index.html" class="btn btn-secondary">Tagasi avalehele</a>
+        </div>
+    </div>
 </body>
 </html>
