--- a/cart.html
+++ b/cart.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Basket</title>
+    <link rel="stylesheet" href="disain.css">
     <link rel="stylesheet" href="css\bootstrap.css">
     <script src="js/bootstrap.js"></script>
-    <link rel="stylesheet" href="disain.css">
 </head>
 <body>
-    <!-- Päis koos logoga ja ostukorviga -->
     <div class="header">
         <div class="container">
             <!-- Logo vasakul -->
@@ -34,32 +33,8 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> 
 
-    <!-- Peamine sektsioon (pilt vasakul, tekst paremal) -->
-    <div class="main-section">
-        <!-- Vasakul olev pilt -->
-        <div class="image-container">
-            <img src="images/2360_cropped_uhbb5l.webp" alt="Diivan">
-        </div>
-
-        <!-- Paremal olev tekst -->
-        <div class="text-container">
-            <h1>Diivanid</h1>
-            <p>
-                Ilus on vaadata. Mõnus on istuda. Hea on olla.
-            </p>
-            <p>
-                Meie kollektsioonist leiad kaasaegsed ja kestvad disain-diivanid, 
-                mille tootmisel on järgitud jätkusuutlikke põhimõtteid. 
-                Juba üle 25 aasta oleme pehmet disainmööblit meisterdanud 
-                siinsamas Eestis. Põhjaliku tootearenduse käigus valmivad õiglaselt hinnastatud, 
-                kvaliteetsed, mugavad ja kaunid diivanid.
-            </p>
-        </div>
-    </div>
-
-    <!-- Jalus -->
     <div class="footer">
         <div class="container">
             <p>© 2025 Diivanid OÜ. Kõik õigused kaitstud.</p>
