--- a/BlogView.html
+++ b/BlogView.html
@@ -87,7 +87,7 @@
                 <div class="grid__col grid_col--sm-6 grid__col--md 5 posts_column">
                     <div class="card card--article">
                         <div class="card__article-container"> 
-                            <img src="images/BlogiPildid/diivanvoodi-boston-586-aston-16_3947527.webp" alt="">
+                            <img src="images/BlogiPildid/diivanvoodi-boston-586-aston-16_3947527.webp" alt=""> <br>
                             <h4 class="card__article-title">
                                 <a href="https://softrend.ee/diivan-mac-kuidas-ta-sundis/" class="card__article-link">Kuidas sündis Mac Diivan</a>
                             </h4>
@@ -97,7 +97,7 @@
 
                     <div class="card card--article">
                         <div class="card__article-container"> 
-                            <img src="images/BlogiPildid/diivanvoodi-boston-597-wind-76_3862351.jpg" alt="">
+                            <img src="images/BlogiPildid/diivanvoodi-boston-597-wind-76_3862351.jpg" alt=""> <br>
                             <h4 class="card__article-title">
                                 <a href="https://softrend.ee/diivan-mac-kuidas-ta-sundis/" class="card__article-link">Kuidas sündis idee teha diivani tooteid</a>
                             </h4>
@@ -107,8 +107,8 @@
 
                     <div class="card card--article">
                         <div class="card__article-container"> 
-                            <img src="images/BlogiPildid/diivanvoodi-columbus-137-paros-2_3095694.webp" alt="">
-                            <h4 class="card__article-title">
+                            <img src="images/BlogiPildid/diivanvoodi-columbus-137-paros-2_3095694.webp" alt=""> <br>
+                            <h4 class="card__article-title"> 
                                 <a href="https://softrend.ee/diivan-mac-kuidas-ta-sundis/" class="card__article-link">Diivanite ajalugu</a>
                             </h4>
                             <time class="card__date" datetime> 6.03.2025</time>
@@ -117,8 +117,8 @@
 
                     <div class="card card--article">
                         <div class="card__article-container"> 
-                            <img src="images/BlogiPildid/diivanvoodi-shelton-104-poso-100_3679557.webp" alt="">
-                            <h4 class="card__article-title">
+                            <img src="images/BlogiPildid/diivanvoodi-shelton-104-poso-100_3679557.webp" alt=""> <br>
+                            <h4 class="card__article-title"> <br>
                                 <a href="https://softrend.ee/diivan-mac-kuidas-ta-sundis/" class="card__article-link">Meie uus disain tulekul...</a>
                             </h4>
                             <time class="card__date" datetime> Coming soon (27.03.2025) </time>
