--- a/Contact.html
+++ b/Contact.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="css\bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <script src="js/bootstrap.js"></script>
     <link rel="stylesheet" href="disain.css">
     <style>
-        .contact-section {
-            padding: 30px 0;
-        }
-
+        /* Kontaktide sektsioon */
         .contact-section .container {
             display: flex;
             align-items: center;
@@ -22,6 +19,11 @@
 
         .contact-section .logo img {
             height: 80px; /* Sobiv suurus */
+        }
+
+        /* Logo on nüüd veidi keskel */
+        .contact-section .logo {
+            flex-shrink: 0;
         }
 
         .contact-info {
@@ -46,6 +48,25 @@
 
         .contact-info a:hover {
             text-decoration: underline;
+            color: #800080;
+        }
+
+        /* Google Map */
+        #map {
+            width: 100%;
+            height: 400px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            margin-top: 30px; /* Lisa natuke ruumi kaardi kohale */
+        }
+
+        /* Footer all */
+        .footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #222;
+            color: white;
+            width: 100%;
         }
     </style>
 </head>
@@ -88,6 +109,7 @@
             <!-- Kontaktinfo paremal -->
             <div class="contact-info">
                 <ul>
+                    <br>
                     <li><strong>ETRI Groupp OÜ</strong></li>
                     <li>📞 +372 (63) 46288</li>
                     <li>✉️ <a href="mailto:info@moobel1.ee">info@moobel1.ee</a></li>
@@ -99,12 +121,18 @@
         </div>
     </div>
 
+    <!-- Google Map -->
+    <div id="map"></div>
+
+    <!-- Google Maps API -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2029.9114001353914!2d24.750063377571795!3d59.41787287465735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469294bc824d41a3%3A0xc358d7c8816bd4f!2sVeerenni%20tn%2051%2C%2010138%20Tallinn!5e0!3m2!1set!2see!4v1742936614932!5m2!1set!2see" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
+
     <div class="footer">
         <div class="container">
             <p>© 2025 Diivanid OÜ. Kõik õigused kaitstud.</p>
-            <a href="index.html" class="btn btn-secondary">Tagasi avalehele</a>
         </div>
     </div>
 
 </body>
-</html>
+</html> 
